--- a/index.html
+++ b/index.html
@@ -3,23 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Userflow</title>
-    <meta name="description" content="Userflow Project" />
-    <meta name="author" content="Userflow Team" />
+    <title>daisy-users-hub</title>
+    <meta name="description" content="Lovable Generated Project" />
+    <meta name="author" content="Lovable" />
 
-    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-    <meta property="og:title" content="Userflow" />
-    <meta property="og:description" content="Userflow Project" />
+    <meta property="og:title" content="daisy-users-hub" />
+    <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@userflow" />
-    <meta name="twitter:image" content="/logo.png" />
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
